# nemesis2

./: README.md
.github/workflows/: ci-cd.yml
agent-lite/app/: main.py
install/: install_nemesis.bat  oneclick.ps1
nemesis-main/agent/: dockerfile  pyproject.toml  requirements.txt
nemesis-main/agent/src/api/: __init__.py  ai.py  config.py  jobs.py  logging_conf.py  main.py  scanner.py  storage.py
nemesis-main/agent/src/api/static/: style.css
nemesis-main/agent/src/api/templates/: index.html  modules.html  workers.html
nemesis-main/agent/src/guards/: __init__.py
nemesis-main/infra/: compose.prod.yml  compose.staging.yml
nemesis-main/tools/ci/: smoke_tests.sh
nemesis-main/tools/deploy/: deploy.sh  promote.sh  rollback.sh
nemesis-main/tools/registry/: build_push.sh
